remove robots.txt, fix select label text contrast

--- a/components/Select.module.css
+++ b/components/Select.module.css
@@ -41,7 +41,7 @@
 }
 .label {
   margin-right: 0.3em;
-  color: #637381;
+  color: #454f5b;
 }
 .label-icon {
   width: 1rem;
